--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   backend:
-    build: ./backend
+    build: ./Backend
     env_file:
       - ./Backend/.env
     ports:
@@ -13,9 +13,9 @@ services:
       - db
 
   frontend:
-    build: ./frontend
+    build: ./Frontend
     ports:
-      - "8080:80"
+      - "5173:80"
 
   db:
     image: postgres:13-alpine
