--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chartjs": "^0.3.24",
+    "daisyui": "^4.12.13",
     "vue": "^3.5.11",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.5"
