--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.4",
     "chartjs": "^0.3.24",
     "daisyui": "^4.12.13",
+    "primevue": "^4.1.1",
     "vue": "^3.5.11",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.5"
